src/test/deca/codegen/invalid/NoInitModUn.deca
// Description:
//    modulo sans initialisation
//
// Resultats:
//  Erreur
//
// Historique:
//    cree le 22/01/2017
{
int x;
print(x % 1);
}
